[gd_scene load_steps=2 format=3 uid="uid://d241it0v4sl7g"]

[ext_resource type="Script" path="res://addons/card_editor/effect_list.gd" id="1_8aonk"]

[node name="EffectList" type="GridContainer"]
columns = 2
script = ExtResource("1_8aonk")

[node name="EffectsLabel" type="Label" parent="."]
layout_mode = 2
text = "On Draw"

[node name="EffectListButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 17
selected = 0
popup/item_0/text = "<add effect>"
popup/item_0/id = 0
popup/item_1/text = "Add Armor"
popup/item_1/id = 1
popup/item_2/text = "Add Strength"
popup/item_2/id = 2
popup/item_3/text = "Add Defense"
popup/item_3/id = 3
popup/item_4/text = "Add Steady"
popup/item_4/id = 4
popup/item_5/text = "Deal damage"
popup/item_5/id = 5
popup/item_6/text = "Exhaust"
popup/item_6/id = 6
popup/item_7/text = "Heal"
popup/item_7/id = 7
popup/item_8/text = "Last Played"
popup/item_8/id = 8
popup/item_9/text = "Off Balance"
popup/item_9/id = 9
popup/item_10/text = "Deal damage equal to block"
popup/item_10/id = 10
popup/item_11/text = "Trash"
popup/item_11/id = 11
popup/item_12/text = "Cursed Strike"
popup/item_12/id = 12
popup/item_13/text = "Draw"
popup/item_13/id = 13
popup/item_14/text = "Multiply armor"
popup/item_14/id = 14
popup/item_15/text = "Multiply steady"
popup/item_15/id = 15
popup/item_16/text = "Purge"
popup/item_16/id = 16

[node name="Spacer" type="Control" parent="."]
layout_mode = 2

[node name="EffectVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[connection signal="item_selected" from="EffectListButton" to="." method="_add_selected_button_item_to_box"]
